--- a/index.html
+++ b/index.html
@@ -3,29 +3,20 @@
 
 <head>
    <meta charset="utf-8">
-   <title>RetroArch Web Player</title>
+   <title>ONS Online</title>
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <!-- Bootstrap core CSS -->
-   
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
       rel="stylesheet" type="text/css">
-   <!-- Font Awesome -->
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css">
-   <!-- Material Design Bootstrap -->
    <link href="https://cdn.jsdelivr.net/npm/mdbootstrap@4.1.1/css/mdb.min.css" rel="stylesheet">
-
    <link href="libretro.css" rel="stylesheet" type="text/css">
    <link rel="shortcut icon" href="media/retroarch.ico" />
-
 </head>
 
 <body>
-   <!--Navbar-->
-   <nav class="navbar navbar-dark bg-primary disable">
+   <nav class="navbar navbar-dark bg-primary">
       <div class="container">
-         <!--navbar content-->
-         <div class="navbar-toggleable-xs">
-            <!--Links-->
+         <div class="navbar-toggleable-xs" style="width: 100%;">
             <ul class="nav navbar-nav">
                <div class="dropdown">
                   <li class="nav-item dropdown">
@@ -60,15 +51,14 @@
                      </button>
                      <button type="button" class="btn btn-primary tooltip-enable" data-toggle="modal"
                         data-target="#helpModal" disabled>Help</button>
+                     <button class="btn btn-primary" id="btnHideMenu" title="Toggle Menu"
+                        style="float: right;">
+                        <span class="fa fa-chevron-up" id="icnHideMenu"></span> <span class="sr-only">Hide Top
+                           Navigation</span>
+                     </button>
                   </li>
                </div>
             </ul>
-            <div class="toggleMenu">
-               <button class="btn btn-primary" id="btnHideMenu" title="Toggle Menu">
-                  <span class="fa fa-chevron-up" id="icnHideMenu"></span> <span class="sr-only">Hide Top
-                     Navigation</span>
-               </button>
-            </div>
          </div>
          <!-- Basics steps modal for Web Libretro -->
          <div class="modal fade" id="helpModal" role="dialog" style="color:black;">
@@ -82,27 +72,6 @@
                      <h3><b>Load Core</b></h3>
                      <p>Load your core by clicking on the first tab. Scroll down until you reach the desired Core. We
                         will use Nestopia for now. Don't forget - Content must be compatible with the matched Core.</p>
-                     <li>Nes: <i>NESTOPIA</i></li>
-                     <li>Game Boy / Color: <i>Gambatte</i></li>
-                     </ul>
-                     <p>etc.</p>
-                     <p></p>
-                     <h3><b>Load Content</b></h3>
-                     <p>After selecting Core, click Run. After RetroArch opens, click Add Content and select your
-                        compatible ROM.</p>
-                     <li>Nestopia > <i>YourGame.nes</i></li>
-                     <li>Gambatte > <i>YourGame.gbc</i></li>
-                     </ul>
-                     <p>etc.</p>
-                     <p></p>
-                     <h3><b><span class="fa fa-trash-o"></span> Cleanup Storage</b></h3>
-                     <p>The trashcan erases your existing configuration and presets. If the Web Player doesn't start,
-                        you should click the trashcan and refresh the cache in your browser (usually F5 or Shift+F5).
-                     </p>
-                     <p></p>
-                     <h3><b><span class="fa fa-bars"></span> Quick Menu</b></h3>
-                     <p>If you click on the three line icons, the Quick Menu will open here as in RetroArch.</p>
-
                   </div>
                   <div class="modal-footer">
                      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -114,8 +83,8 @@
       <!--/.navbar content-->
       </div>
    </nav>
-   <div class="bg-inverse webplayer-container">
-      <div class="webplayer_border text-xs-center" id="canvas_div">
+   <center class="bg-inverse webplayer-container">
+      <div class="webplayer_border center" id="canvas_div">
          <div class="showMenu">
             <button type="button" class="btn btn-link">
                <span class="fa fa-chevron-down" id="icnShowMenu"></span> <span class="sr-only">Show Top
@@ -127,14 +96,13 @@
          <img class="webplayer-preview img-fluid" src="media/canvas.png"
             alt="RetroArch Logo">
       </div>
-   </div>
+   </center>
 
    <script src="https://cdn.jsdelivr.net/npm/jquery@3.1.0/dist/jquery.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/jquery.hotkeys@0.1.0/jquery.hotkeys.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/tether@1.3.4/dist/js/tether.min.js"></script>
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"></script>
-   <!-- script src="//wzrd.in/standalone/browserfs@0.6.1"></script -->
    <script src="https://cdn.jsdelivr.net/npm/browserfs@1.4.3/dist/browserfs.min.js"></script>
    <script src="libretro.js"></script>
 </body>
