--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                                 })
                             }
                             var mfs = new BrowserFS.FileSystem.MountableFileSystem()
-                            var xfs1 = new BrowserFS.FileSystem.XmlHttpRequest('index.json', 'https://cdn.jsdelivr.net/gh/wcwac/7f@gamefile1/')
+                            var xfs1 = new BrowserFS.FileSystem.XmlHttpRequest('index.json', 'https://cdn.jsdelivr.net/gh/wcwac/7f@gamefile/')
                             var xfs2 = new BrowserFS.FileSystem.XmlHttpRequest('index.json', 'https://cdn.jsdelivr.net/gh/wcwac/7f@gamefile2/')
                             var xfs3 = new BrowserFS.FileSystem.XmlHttpRequest('index.json', 'https://cdn.jsdelivr.net/gh/wcwac/7f@gamefile3/')
                             var xfs4 = new BrowserFS.FileSystem.XmlHttpRequest('index.json', 'https://cdn.jsdelivr.net/gh/wcwac/7f@gamefile4/')
                             var xfs5 = new BrowserFS.FileSystem.XmlHttpRequest('index.json', 'https://cdn.jsdelivr.net/gh/wcwac/7f@gamefile5/')
 
-                            mfs.mount('/home', xfs1)
-                            mfs.mount('/home/part2', xfs2)
-                            mfs.mount('/home/part3', xfs3)
-                            mfs.mount('/home/part4', xfs4)
-                            mfs.mount('/home/part5', xfs5)
+                            mfs.mount('/home/game', xfs1)
+                            mfs.mount('/home/game/part2', xfs2)
+                            mfs.mount('/home/game/part3', xfs3)
+                            mfs.mount('/home/game/part4', xfs4)
+                            mfs.mount('/home/game/part5', xfs5)
                             mfs.mount('/home/data', afs)
                             BrowserFS.initialize(mfs)
                             var BFS = new BrowserFS.EmscriptenFS()
