--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     var Module = {
         // noInitialRun: true,
-        arguments: ['-v', '--menu'],
+        arguments: ['--save-dir','/home/data','--root','/home/game'],
         preRun: [],
         postRun: [],
         print: function (text) {
